add: more posts

--- a/source/_posts/reading/2020-08-22-嫌われる勇気.md
+++ b/source/_posts/reading/2020-08-22-嫌われる勇気.md
@@ -6,7 +6,7 @@ categories:
     - Reading
 tags:
     - 心理学
-    - 阅读笔记
+    - 读书笔记
 ---
 
 1. もしも人間が変われる存在だとするなら、原因論に基づく価値観などありえず、自ずと目的論に立脚（りっきゃく）せざるをえないと。
