add: some book covers

--- a/source/_posts/math/数学漫步/数学分析概览/2021-06-06-导数与微分.md
+++ b/source/_posts/math/数学漫步/数学分析概览/2021-06-06-导数与微分.md
@@ -57,7 +57,6 @@ y = \arcsin x &\ \ \ y' = \frac{1}{\sqrt{1 - x^2}} \\
 y = \arccos x &\ \ \ y' = -\frac{1}{\sqrt{1 - x^2}} \\
 y = \arctan x &\ \ \ y' = \frac{1}{1 + x^2} \\
 y = \text{arccot} x &\ \ \ y' = -\frac{1}{1 + x^2} \\
-
 \end{aligned}
 $$
 
@@ -135,7 +134,6 @@ y = \arcsin x &\ \ \ dy = \frac{dx}{\sqrt{1 - x^2}} \\
 y = \arccos x &\ \ \ dy = -\frac{dx}{\sqrt{1 - x^2}} \\
 y = \arctan x &\ \ \ dy = \frac{dx}{1 + x^2} \\
 y = \text{arccot} x &\ \ \ dy = -\frac{dx}{1 + x^2} \\
-
 \end{aligned}
 $$
 
@@ -224,7 +222,6 @@ $$
 \begin{aligned}
 p(x) &= f(x_0) + \frac{f'(x_0)}{1!}(x - x_0) + \frac{f''(x_0)}{2!}(x - x_0)^2 + \cdots + \frac{f^{(n)}(x_0)}{n!}(x - x_0)^n \\
 &= f(x_0) + \sum_{i = 1}^n \frac{f^{(n)}(x_0)}{n!}(x - x_0)^n
-
 \end{aligned}
 $$
 
@@ -254,7 +251,7 @@ $$
 
 考察点左右导数符号改变。如果导数从正变为负，则考察点为极大值，因为函数先增后减。如果导数从负变正，则考察点为极小值，因为函数先减后增。
 
-!https://s3-us-west-2.amazonaws.com/secure.notion-static.com/fd8eee49-6459-484a-bc1c-56b65ce815ad/Untitled.png
+![](/assets/images/数学漫步/数学分析概览/导数与微分/极值情况.png)
 
 也可以通过看高阶导数来考察。如果一阶导数 $f'(x_0) = 0$，并且二阶导数 $f''(x_0) > 0$，则说明其一阶导数递增，而 $f'(x_0) = 0$ ，则有 $f'$ 是从小于零变到大于零的，意味着 $f$ 先减后增，这就说明在 $x_0$ 处为极小值。类似地，如果 $f''(x_0) < 0$，则在 $x_0$ 处为极大值。
 
@@ -284,7 +281,7 @@ $$
 y = \frac{x_2 - x}{x_2 - x_1}y_1 + \frac{x - x_1}{x_2 - x_1}y_2
 $$
 
-!https://s3-us-west-2.amazonaws.com/secure.notion-static.com/35a4a07d-34e9-45af-a775-6f8fd9794a1a/Untitled.png
+![](/assets/images/数学漫步/数学分析概览/导数与微分/凹凸函数.png)
 
 令 $q_1, q_2$ 为上式的系数，即 $q_1 = \frac{x_2 - x}{x_2 - x_1}, q_2 = \frac{x - x_1}{x_2 - x_1}$则得到凸函数定义的不等式的右端部分。而从 $q_1$ 可以解得 $x = q_1 x_1 + q_2 x_2$，由此得到凸函数定义的不等式左端部分。
 
