--- a/source/_posts/reading/2023-02-28-集异璧之大成.md
+++ b/source/_posts/reading/2023-02-28-集异璧之大成.md
@@ -11,6 +11,15 @@ tags:
     - 读书笔记
 ---
 
+<figure class="book-cover">
+  <img src="/assets/images/books/集异璧之大成.png" />
+  <figcaption>
+    集异璧之大成
+    <br />
+    <span class="book-authors">Hofstadter</span>
+  </figcaption>
+</figure>
+
 ![哥德尔定理背后的原理的形象化表现](/assets/images/2023-02-28-集异璧之大成/哥德尔定理背后的原理的形象化表现.png)
 
 哥德尔定理背后的原理的形象化表现
