add: many posts

--- a/source/_posts/languages/2019-02-21-德语单词记忆.md
+++ b/source/_posts/languages/2019-02-21-德语单词记忆.md
@@ -34,7 +34,7 @@ tags:
 - **der Gastgeber** 主人。Gast + geben，Gast是客人，geben是给予，名词化了变成geber给予者，也就是为客人所奉献，所服务，所给予的人，那就是主人了。
 - **die Gedächtniskirche** 纪念大教堂。Gedächtnis + Kirche，Gedächtnis是记忆，纪念，Kirche为教堂。
 - **die Geldtasche** 钱包。Geld + Tasche，装钱的包包，也就是钱包。
-- **die Gelegenheit** 机会。这个词比较玄妙，词根legen是放置的意思，Gelegen过去式，表达已经放在那里了，heit使之名词化，“已经放在那里的东西”，将此与机会联系在一起，不免的有些牵强，但也只是帮助记忆罢了。
+- **die Gelegenheit** 机会。gelegen 是合适的，加 heit 名词化，适当的，正是时候的东西，那就是机会了。
 - **die Geschirrspülmaschine** 洗碗机。Geschirr + spülen + Maschine，Geschirr是餐具，spülen是清洗，清洗餐具的机器。
 - **die Haltestelle** （公共汽车，电车）停靠站。halter + stelle，一个停靠的位置。
 - **das Haustier** 宠物。Haus + Tier，在家里的动物，就是宠物了。
@@ -84,7 +84,6 @@ tags:
 - **der Hunger** - hunger
 - **hundert** - hundred
 - **die Idee** - idea
-- **die Informatik** - information
 - **der Ingenieur** - engineer
 - **das Jahr** - year
 - **der Kaffee** - cafe
@@ -115,7 +114,7 @@ tags:
 - **selber** - self
 - **selten** - seldom
 - **der Stern** - star
-- **die Supper** - soup
+- **die Suppe** - soup
 - **die Szene** - scene
 - **tausend** - thousand
 - **das Telefon** - telephone
@@ -144,7 +143,7 @@ tags:
 
 还有很多语序与英语一样的组合词，通过拆分就可以知道意思，这类副词极为常用，而且很多都是很简单的拆分。
 
-- **damages** - da + mals / that time（那时候，当时）
+- **damals** - da + mals / that time（那时候，当时）
 - **danach** - da + nach / after that（之后）
 - **dazu** - da + zu / that too（另外，外加）
 - **einmal** - ein + mal / one time（一次，某时）
