add: more posts

--- a/source/_posts/life/2024-07-03-往事系列.md
+++ b/source/_posts/life/2024-07-03-往事系列.md
@@ -14,3 +14,4 @@ tags:
 往事不回想，就不会再记起，让自己重新回忆过去的细节，其实也没有太大必要，这个系列会随着我的思绪而进行，想起来一些，便记录一些。
 
 - {% post_link life/往事系列/2024-10-08-随想 %}
+- {% post_link life/往事系列/2024-12-19-随想 %}
