add: more posts

--- a/source/_posts/life/2024-07-03-往事系列.md
+++ b/source/_posts/life/2024-07-03-往事系列.md
@@ -13,5 +13,20 @@ tags:
 
 往事不回想，就不会再记起，让自己重新回忆过去的细节，其实也没有太大必要，这个系列会随着我的思绪而进行，想起来一些，便记录一些。
 
+# 装修记录
+
+这是一段宝贵而难得的经历，一辈子也不一定能经历第二次了。中途有各种心酸，痛苦，烦恼，当然也有一些开心的瞬间。有人离我而去，也有人对我不离不弃（工头），虽然不可能事无巨细地把这近一年的事情记录下来，但我还是尽量凭过程记录以及记忆进行记录，有缘人可以参考，也方便日后自己回顾和怀念。
+
+- {% post_link life/往事系列/2025-03-02-装修记录-设计 %}
+- {% post_link life/往事系列/2025-03-02-装修记录-选材 %}
+- {% post_link life/往事系列/2025-03-02-装修记录-数据 %}
+- {% post_link life/往事系列/2025-03-02-装修记录-问题 %}
+
+# 随想
+
+有想法的时候记录一下，没想法的时候吐槽一下。
+
 - {% post_link life/往事系列/2024-10-08-随想 %}
 - {% post_link life/往事系列/2024-12-19-随想 %}
+- {% post_link life/往事系列/2024-12-30-随想 %}
+- {% post_link life/往事系列/2025-02-21-随想 %}
