--- a/source/_posts/reading/2025-02-01-日本人のための日本語文法入門.md
+++ b/source/_posts/reading/2025-02-01-日本人のための日本語文法入門.md
@@ -168,8 +168,7 @@ tags:
 
 ## 日本語文の姿
 
-学校文法とは異なる日本語文法の枠組みを説明しました。ここで、もう一度おさらいしてみましょう。日本語文の基本構造は述語を中心にいくつかの成分から構成され、それらの成分は格助詞によって結ばれています。格成分（格助詞によって述語と結ばれた成分）は述語との関係から必須成分と随意成分に分かれ、述語と必須成分との組み合わせは文型と呼ばれます。日本語文のコトは文型を中心に随意成分が加わるかたちで形成されます。コトは文の言語事実を形成しますが、文としてはまだ未完成です。コトをどのように考え、どのように聞き手に伝えるのかというムードの表現が必要になるからです。このムードの表現の一つが「～は」であり、コトのなかから主題となる成分を選び、提示するわけです。主題が提示されると、残った部分は主題について説明する部分となり、解説と呼ばれます。この「主題－解説」という関係が確立されることで、日本語文としての姿ができあがります。なお、ムードの表現の多くは文末につづきますが、これについては第７章で詳しく説明しま
-す。
+学校文法とは異なる日本語文法の枠組みを説明しました。ここで、もう一度おさらいしてみましょう。日本語文の基本構造は述語を中心にいくつかの成分から構成され、それらの成分は格助詞によって結ばれています。格成分（格助詞によって述語と結ばれた成分）は述語との関係から必須成分と随意成分に分かれ、述語と必須成分との組み合わせは文型と呼ばれます。日本語文のコトは文型を中心に随意成分が加わるかたちで形成されます。コトは文の言語事実を形成しますが、文としてはまだ未完成です。コトをどのように考え、どのように聞き手に伝えるのかというムードの表現が必要になるからです。このムードの表現の一つが「～は」であり、コトのなかから主題となる成分を選び、提示するわけです。主題が提示されると、残った部分は主題について説明する部分となり、解説と呼ばれます。この「主題－解説」という関係が確立されることで、日本語文としての姿ができあがります。なお、ムードの表現の多くは文末につづきますが、これについては第７章で詳しく説明します。
 
 これらのことを図にまとめると、次のようになります。
 
@@ -177,15 +176,13 @@ tags:
 
 ## 自然中心と人間中心の発想
 
-自動詞は「雨が降る」や「太陽が輝く」など、自然現象を表すときによく使われ、物事が自
-然に生じることを表します。一方、他動詞は、「子供が絵を描く」や「父親が庭を掃除する」など、人間の行動が起点となり、物事を引き起こすことを表します。**一言で言えば、自動詞は自然中心であり、他動詞は人間中心の見方に立つと言えるわけですね。**このような観点から、日本語を見つめてみると、人間に関わることでも自動詞によって表されることが多いのに気づきます。日本語では、人間の活動も大きな自然界の流れの一つとしてとらえられ、自動詞で表されるわけです。
+自動詞は「雨が降る」や「太陽が輝く」など、自然現象を表すときによく使われ、物事が自然に生じることを表します。一方、他動詞は、「子供が絵を描く」や「父親が庭を掃除する」など、人間の行動が起点となり、物事を引き起こすことを表します。**一言で言えば、自動詞は自然中心であり、他動詞は人間中心の見方に立つと言えるわけですね。**このような観点から、日本語を見つめてみると、人間に関わることでも自動詞によって表されることが多いのに気づきます。日本語では、人間の活動も大きな自然界の流れの一つとしてとらえられ、自動詞で表されるわけです。
 
 ## 自動詞と他動詞の区別
 
 自動詞と他動詞の区別はそれほど難しくはありません。「雪が降る」「風が吹く」「釘が錆びる」など目的語がない動詞が**自動詞**、「弟が弁当を食べる」「子供がおもちゃを壊す」「母が料理を作る」など、目的語を伴うものが**他動詞**となるわけです。
 
-起点や通過点がヲ格となる移動動詞には、「出る」「出発する」
-「離れる」「飛び立つ」（以上、起点）や「歩く」「渡る」「走る」「通る」「飛ぶ」（以上、通過点）などがあります。これらの動詞はすべて自動詞に分類されますので、注意する必要があります。
+起点や通過点がヲ格となる移動動詞には、「出る」「出発する」「離れる」「飛び立つ」（以上、起点）や「歩く」「渡る」「走る」「通る」「飛ぶ」（以上、通過点）などがあります。これらの動詞はすべて自動詞に分類されますので、注意する必要があります。
 
 最後に、この自動詞と他動詞の違いをまとめると、以下のようになります。
 
@@ -235,8 +232,7 @@ tags:
 
 日本語は自然中心の自動詞使用が多いのが特徴です。例えば、**人間中心**の英語では地名に人名をつけたがり、**自然中心**の日本語では空間による地名が多いことです。
 
-この人間中心と自然中心の発想は、**主語指向型言語**と**話題指向型言
-語**という言い方で説明されることもあります。
+この人間中心と自然中心の発想は、**主語指向型言語**と**話題指向型言語**という言い方で説明されることもあります。
 
 主語指向型言語である英語では、動作主に焦点を当てて、動作主が何かをするという表現をするのに対して、話題指向型言語である日本語では、動作主は表面に表さずに、あたかも「自然な成り行きでそうなった」というような表現を好むのである。
 
