add: more posts

--- a/source/_posts/life/往事系列/2025-03-02-装修记录-问题.md
+++ b/source/_posts/life/往事系列/2025-03-02-装修记录-问题.md
@@ -81,3 +81,30 @@ tags:
 ![封窗效果](/assets/images/2025-03-02-装修记录-问题/封窗效果.jpeg)
 
 # 烟道与烟机问题
+
+油烟机需要对接公共烟道，而公共烟道的位置是固定的。在拆除毛坯之前，整体设计都是没有考虑烟道的位置。甚至连烟道在哪里都不知道，当拆成毛坯之后，大家才发现烟道的位置，但此时设计基本已经定稿，并且实事求是的说，我是对功能分区满意的，所以此时面临的问题是厨房的油烟机如何对接烟道。
+
+![烟道问题](/assets/images/2025-03-02-装修记录-问题/设计思路-烟道问题.png)
+
+厨房和烟道口之间的墙需要打通，然后接上烟道。这里的风险在于：
+
+- 在墙上打一个直径很大的洞比较危险。
+- 烟管转弯几次，可能会影响抽油烟机的效果。
+- 油烟机与烟道对接有高度的问题，所以也需要考虑油烟机的类型与牌子。
+
+这里有几个大坑：
+
+- 不同的油烟机对接的烟管直径是不一样的。
+- 工人打孔机的直径是有限制的，一旦错了是不能再重新改变打孔的大小的。
+- 油烟机的类型分侧吸和顶吸，侧吸的风机在油烟机里，而顶吸的风机在油烟机上方，两者所需要预留的高度是不一样的。
+
+而结果，在我事先给了油烟机牌子之后，橱柜和家政柜的商家还是犯了两个严重的错误：
+
+- 烟管直径搞错了。由于商家说使用18mm直径的油烟管，打孔工人就使用了18mm直径的钻头，而事实上，打完孔之后发现油烟管直径是18.9mm的，这使得烟管不能很顺利通过那个孔。最后还是由工头硬生生将烟管挤了进去，中间是否有破损就很难知道了。
+- 烟机类型搞错了。实际打孔高度只能允许安装侧吸式油烟机，然而我确定的款式是顶吸式油烟机，他们没有提前只出这个错误。最后是安装师傅上门安装的时候，才发现无法安装顶吸式。侧吸式的选择就少很多了，最后妥协用了师傅推荐的一款。
+
+当时钻孔实际上很害怕忽然有人上门检查，钻孔结束之后其实算是松了一口气的，但后续的烟管直径问题以及烟机类型问题让我觉得，这个这么困难的问题都解决了，却因为这些小问题导致美中不足，真的是有点心塞。
+
+![钻孔那天专门请假](/assets/images/2025-03-02-装修记录-问题/钻孔.jpeg)
+
+不过排烟效果现在就无法得知了，这个只能真正入住之后再体验了，如果到时候真的漏气，可能会使得整个家政柜都是油烟的味道。经过这次我能充分体会到“厨房不能随便改”这个道理了。不过要是再改一次，我就能避免这些问题了。
