--- a/source/_posts/life/往事系列/2025-03-02-装修记录-数据.md
+++ b/source/_posts/life/往事系列/2025-03-02-装修记录-数据.md
@@ -12,7 +12,7 @@ tags:
 
 整个装修时间周期极长，涉及到的信息量极大，下面是对一些主要时间与金钱花费进行统计。
 
-# 时间
+# 时间 (9 个自然月)
 
 部分工作是交替进行，时间也不是精确到天，只是表明一个大概的时间阶段。
 
@@ -53,104 +53,106 @@ tags:
 
 这些时间算下来，足足有一个半月左右，如果能省去这部分时间，减去过年一个月的停工时间，那其实整个工程可以更快完成。
 
-# 费用 **(合计 ￥77w)**
+# 费用 (77w)
 
 最开始时候的预算可能是 40w 左右，然而实操下来出乎意料，到了后期给钱已经麻木，因为停不下来，一旦开始了，后面只能不断填坑。这个数字并不包含软装，沙发，餐桌，书柜，床都不包含在内，因为软装就等于是日后生活用品持续补充的一部分了，而这 77w 算是整个装修过程中既定的部分了。有不少微小的支出没有算在里面，但总额不会差太多。
 
-## 莫川硬装 **(合计 ￥358886.5)**
+本来也没打算分享这种价格，但是考虑到网上那些博主也好，文章也好，价格水分太大了，甚至连我自己一开始也没有任何东西可以参考，*最后给的这些钱，肯定也包含了一部分“学费”*，所以才希望把价格分享出来，有缘人可以参考一下。
+
+## 莫川硬装 (36w)
 
 给莫川支付的部分，反而是最接近最开始预算的一部分，然而一开始并不知道，这部分费用基本上都是硬装的工程费用和辅料费用，所有主材都是需要自行购买。垃圾清运的费用可以说是一开始完全没想到的费用，然而打成毛坯实在太多垃圾了。
 
-| 类别 | 金额 | 时间 | 备注 |
+| 类别 | 金额(￥) | 时间 | 备注 |
 | --- | --- | --- | --- |
-| 设计费 | 23296 | 2024年4月20日 | 一期款项 |
-| 设计费 | 9984 | 2024年8月31日 | 二期款项 |
-| 硬装施工费 | 10000 | 2024年5月12日 | 订金 |
-| 装修保证金 | 2000 | 2024年5月24日 | 给物管的保证金 |
-| 硬装施工费 | 109953 | 2024年6月1日 | 一期款项 45% |
-| 硬装施工费 | 90575 | 2024年8月28日 | 一期款项 35% |
-| 硬装施工费 | 38818 | 2024年12月3日 | 一期款项 15% |
-| 硬装施工费 | 12939 | 2025年2月27日 | 一期款项 5% |
-| 装修清运费 | 1050 | 2024年6月3日 | 多多拉6立方自卸车 |
-| 装修清运费 | 1000 | 2024年6月11日 | 多多拉6立方自卸车 |
-| 装修清运费 | 1000 | 2024年6月12日 | 多多拉6立方自卸车 |
-| 装修清运费 | 1000 | 2024年6月14日 | 多多拉6立方自卸车 |
-| 装修清运费 | 740 | 2024年7月28日 | 多多拉4立方自卸车 |
-| 李工部分工作 | 4840 | 2024年11月8日 | 两车垃圾，13个孔x80，拆楼梯 800 |
-| 硬装三期增项 | 38191.50 | 2024年12月3日 | 柜子与硬装增项 |
-| 硬装三期增项李工部分 | 12000 | 2024年12月3日 | 
-| 装修清运费 | 1500 | 2025年1月19日 | 李工垃圾车 |
+| **设计费** | 23296 | 2024年4月20日 | 一期款项 |
+| **设计费** | 9984 | 2024年8月31日 | 二期款项 |
+| **硬装施工费** | 10000 | 2024年5月12日 | 订金 |
+| **装修保证金** | 2000 | 2024年5月24日 | 给物管的保证金 |
+| **硬装施工费** | 109953 | 2024年6月1日 | 一期款项 45% |
+| **硬装施工费** | 90575 | 2024年8月28日 | 一期款项 35% |
+| **硬装施工费** | 38818 | 2024年12月3日 | 一期款项 15% |
+| **硬装施工费** | 12939 | 2025年2月27日 | 一期款项 5% |
+| **装修清运费** | 1050 | 2024年6月3日 | 多多拉6立方自卸车 |
+| **装修清运费** | 1000 | 2024年6月11日 | 多多拉6立方自卸车 |
+| **装修清运费** | 1000 | 2024年6月12日 | 多多拉6立方自卸车 |
+| **装修清运费** | 1000 | 2024年6月14日 | 多多拉6立方自卸车 |
+| **装修清运费** | 740 | 2024年7月28日 | 多多拉4立方自卸车 |
+| **李工部分工作** | 4840 | 2024年11月8日 | 两车垃圾，13个孔x80，拆楼梯 800 |
+| **硬装三期增项** | 38191.50 | 2024年12月3日 | 柜子与硬装增项 |
+| **硬装三期增项李工部分** | 12000 | 2024年12月3日 | 
+| **装修清运费** | 1500 | 2025年1月19日 | 李工垃圾车 |
 
-## 整体耗材 **(合计 300149.52)**
+## 整体耗材 (30w)
 
 整体耗材其实算是装修花费的巨头部分，每个项目其实都能采用更便宜的做法，不过我也没有选择很高端的做法，都是在合适的价格范围内尽量选择好的，这个在“装修记录 - 选材”里会有更详细的说明。
 
-| 类别 | 金额 | 时间 | 备注 |
+| 类别 | 金额(￥) | 时间 | 备注 |
 | --- | --- | --- | --- |
-| 空调 | 25000 | 2024年7月1日 | 【大金】一拖五 |
-| 空调 | 25000 | 2024年8月8日 | 【大金】设备到场，尾款 |
-| 空调杂费 | 5380 | 2025年2月15日 | 【大金】空调外机架+弧形百叶3380，外机从四楼移到三楼2000 |
-| 楼梯 | 23688 | 2024年7月8日 | 靠墙部分批腻子问题，旋转楼梯扶手接口问题 |
-| 楼梯 | 10000 | 2025年1月16日 | 部分尾款 |
-| 拆楼板补楼板 | 7800 | 2024年7月28日 | 楼梯部分切割以及厨房部分补楼板 |
-| 木地板 | 9021 | 2024年8月5日 | 【艾达】鱼骨拼多层实木地板 |
-| 木地板 | 21049 | 2024年10月24日 | 尾款 |
-| 瓷砖 | 5000 | 2024年8月28日 | 【欧文莱】卫生间 60x120 哑光白砖 |
-| 瓷砖 | 9020 | 2024年9月26日 |  尾款 |
-| 灯具 | 3000 | 2024年8月6日 | 【西顿照明】|
-| 灯具 | 4859 | 2024年10月23日 |
-| 窗户 | 49000 | 2024年6月28日 | 【匠心派格】|
-| 大门 | 10511 | 2024年8月5日 | 【tata】大门定金 |
-| 房门 | 6087 | 2024年7月10日 | 【tata】三个房间门 |
-| 强弱电箱 | 477.77 | 2024年7月21日 | 【施耐德】强弱电箱 |
-| 燃气管道和燃气表改造 | 3500 | 2024年8月1日 | 燃气改造一期（改表）|
-| 燃气管道和燃气表改造 | 3000 | 2024年8月6日 | 燃气改造二期（改管）|
-| 燃气管道和燃气表改造 | 1500 | 2025年3月4日 |  | 燃气改造三期（通气）|
-| 白蚁防治 | 2800 | 2024年8月4日 | 
-| 烟道止逆阀，热水器排烟管，发泡胶 | 327.05 | 2024年9月1日 | 
-| 大理石门槛和人造石窗台 | 3197 | 2024年9月25日 |  |
-| 厨房和过道推拉门 | 11000 | 2024年10月19日 | 【tata】超白玻璃迪拜灰边框 |
-| 石膏灯 | 418 | 2024年11月3日 | 4盏，客厅三盏，主卧一盏 |
-| 艺术漆 | 2000 | 2024年11月9日 | 定金 |
-| 艺术漆 | 27188 | 2024年11月9日 | 一期 |
-| 艺术漆 | 7697 | 2025年1月22日 | 尾款+木架子800/2=400 |
-| 防盗网+雨棚 | 5941 | 2024年11月15日 | 定金 |
-| 美缝 | 2128 | 2024年12月4日 | 砖和窗台的美缝 |
-| 窗帘 | 8800 | 2024年12月8日 | 美居美家 |
-| 金属踢脚线 | 2000 | 2025年1月8日 | 
-| 金属踢脚线安装费用 | 1215 | 2025年2月18日 | 57米x15元+8个弧形 |
-| 开关插座 | 2428 | 2024年12月13日 | 施耐德套装 |
-| 角阀一进三出 | 118 | 2025年2月11日 | 
+| **空调** | 25000 | 2024年7月1日 | 【大金】一拖五 |
+| **空调** | 25000 | 2024年8月8日 | 【大金】设备到场，尾款 |
+| **空调杂费** | 5380 | 2025年2月15日 | 【大金】空调外机架+弧形百叶3380，外机从四楼移到三楼2000 |
+| **楼梯** | 23688 | 2024年7月8日 | 靠墙部分批腻子问题，旋转楼梯扶手接口问题 |
+| **楼梯** | 10000 | 2025年1月16日 | 部分尾款 |
+| **拆楼板补楼板** | 7800 | 2024年7月28日 | 楼梯部分切割以及厨房部分补楼板 |
+| **木地板** | 9021 | 2024年8月5日 | 【艾达】鱼骨拼多层实木地板 |
+| **木地板** | 21049 | 2024年10月24日 | 尾款 |
+| **瓷砖** | 5000 | 2024年8月28日 | 【欧文莱】卫生间 60x120 哑光白砖 |
+| **瓷砖** | 9020 | 2024年9月26日 |  尾款 |
+| **灯具** | 3000 | 2024年8月6日 | 【西顿照明】|
+| **灯具** | 4859 | 2024年10月23日 |
+| **窗户** | 49000 | 2024年6月28日 | 【匠心派格】|
+| **大门** | 10511 | 2024年8月5日 | 【tata】大门定金 |
+| **房门** | 6087 | 2024年7月10日 | 【tata】三个房间门 |
+| **强弱电箱** | 477.77 | 2024年7月21日 | 【施耐德】强弱电箱 |
+| **燃气管道和燃气表改造** | 3500 | 2024年8月1日 | 燃气改造一期（改表）|
+| **燃气管道和燃气表改造** | 3000 | 2024年8月6日 | 燃气改造二期（改管）|
+| **燃气管道和燃气表改造** | 1500 | 2025年3月4日 |  | 燃气改造三期（通气）|
+| **白蚁防治** | 2800 | 2024年8月4日 | 
+| **烟道止逆阀，热水器排烟管，发泡胶** | 327.05 | 2024年9月1日 | 
+| **大理石门槛和人造石窗台** | 3197 | 2024年9月25日 |  |
+| **厨房和过道推拉门** | 11000 | 2024年10月19日 | 【tata】超白玻璃迪拜灰边框 |
+| **石膏灯** | 418 | 2024年11月3日 | 4盏，客厅三盏，主卧一盏 |
+| **艺术漆** | 2000 | 2024年11月9日 | 定金 |
+| **艺术漆** | 27188 | 2024年11月9日 | 一期 |
+| **艺术漆** | 7697 | 2025年1月22日 | 尾款+木架子800/2=400 |
+| **防盗网+雨棚** | 5941 | 2024年11月15日 | 定金 |
+| **美缝** | 2128 | 2024年12月4日 | 砖和窗台的美缝 |
+| **窗帘** | 8800 | 2024年12月8日 | 美居美家 |
+| **金属踢脚线** | 2000 | 2025年1月8日 | 
+| **金属踢脚线安装费用** | 1215 | 2025年2月18日 | 57米x15元+8个弧形 |
+| **开关插座** | 2428 | 2024年12月13日 | 施耐德套装 |
+| **角阀一进三出** | 118 | 2025年2月11日 | 
 
-## 厨房 **(合计 ￥70561)**
+## 厨房 (7w)
 
-| 类别 | 金额 | 时间 | 备注 |
+| 类别 | 金额(￥) | 时间 | 备注 |
 | --- | --- | --- | --- |
-| 橱柜 | 14000 | 2024年7月3日 | 【森品居】橱柜+家政柜+阳台柜 |
-| 橱柜 | 44598 | 2024年10月31日 | 尾款 |
-| 橱柜 | 1300 | 2025年2月17日 | 改家政区燃气柜 |
-| 冰箱 | 6064 | 2024年12月12日 | 【海尔】超薄零嵌山茶花 475L |
-| 烟机灶具 | 4599 | 2024年12月13日 | 【老板】5700烟机 + 7B037灶具 |
-| 洗手盆 | 0 | 2024年10月31日 | 【森品居】送 |
+| **橱柜** | 14000 | 2024年7月3日 | 【森品居】橱柜+家政柜+阳台柜 |
+| **橱柜** | 44598 | 2024年10月31日 | 尾款 |
+| **橱柜** | 1300 | 2025年2月17日 | 改家政区燃气柜 |
+| **冰箱** | 6064 | 2024年12月12日 | 【海尔】超薄零嵌山茶花 475L |
+| **烟机灶具** | 4599 | 2024年12月13日 | 【老板】5700烟机 + 7B037灶具 |
+| **洗手盆** | 0 | 2024年10月31日 | 【森品居】送 |
 
-## 卫浴 **(合计 ￥23461)**
+## 卫浴 (2.3w)
 
-| 类别 | 金额 | 时间 | 备注 |
+| 类别 | 金额(￥) | 时间 | 备注 |
 | --- | --- | --- | --- |
-| 全智能马桶 | 7118 | 2024年12月13日 | 【九牧】无水压限制智能马桶 |
-| 主卫花洒 | 1145 | 2025年2月11日 | 【箭牌】 |
-| 公卫花洒 | 1022 |	2025年2月11日 | 【箭牌】 |
-| 淋浴区玻璃推拉门 | 8000 | 2025年2月9日 | 定金 |
-| 洗手盆+镜柜 | 0 | 2024年10月31日 | 包含在森品居里 |
-| 水龙头 | 646 | 2025年2月11日 | 【科勒】两个 |
-| 排气扇 2 个 | 798 |  | 【松下】集成吊顶排风扇FV-RC20G2 |
-| 地漏 4 个 | 462 |  | 【潜水艇】两干区两湿区 |
-| pd折叠门 2 个 | 4270 | 2024年9月26日 | 【度舰】极窄pd折叠门 |
+| **全智能马桶** | 7118 | 2024年12月13日 | 【九牧】无水压限制智能马桶 |
+| **主卫花洒** | 1145 | 2025年2月11日 | 【箭牌】 |
+| **公卫花洒** | 1022 |	2025年2月11日 | 【箭牌】 |
+| **淋浴区玻璃推拉门** | 8000 | 2025年2月9日 | 定金 |
+| **洗手盆+镜柜** | 0 | 2024年10月31日 | 包含在森品居里 |
+| **水龙头** | 646 | 2025年2月11日 | 【科勒】两个 |
+| **排气扇** 2 个 | 798 |  | 【松下】集成吊顶排风扇FV-RC20G2 |
+| **地漏** 4 个 | 462 |  | 【潜水艇】两干区两湿区 |
+| **pd折叠门** 2 个 | 4270 | 2024年9月26日 | 【度舰】极窄pd折叠门 |
 
-## 家政区 **(合计 ￥13873)**
+## 家政区 (1.3w)
 
-| 类别 | 金额 | 时间 | 备注 |
+| 类别 | 金额(￥) | 时间 | 备注 |
 | --- | --- | --- | --- |
-| 热水器 | 3500 | 2025年2月25日 | 【能率】小云朵EA3 |
-| 回水器 | 1949 | 2025年2月25日 | 【威乐】水魔方Pro |
-| 洗烘套装 | 8424 | 2024年12月13日 | 【松下】白月光 3.0 |
+| **热水器** | 3500 | 2025年2月25日 | 【能率】小云朵EA3 |
+| **回水器** | 1949 | 2025年2月25日 | 【威乐】水魔方Pro |
+| **洗烘套装** | 8424 | 2024年12月13日 | 【松下】白月光 3.0 |
