feat: add more posts

--- a/source/_posts/computer/AI学习/引子.md
+++ b/source/_posts/computer/AI学习/引子.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: AI 学习 - 引子
+title: AI学习时间 01 - 引子
 date: 2025-03-17
 categories:
     - AI
@@ -8,6 +8,10 @@ tags:
     - AI
     - 学习
 ---
+
+<div class="theme-color-blue" markdown=1>
+`#引子` `#书籍推荐` `#大模型` `#大模型简化机制`
+</div>
 
 # 引子
 
