add: more posts

--- a/source/_posts/computer/AI学习/大语言模型.md
+++ b/source/_posts/computer/AI学习/大语言模型.md
@@ -107,6 +107,18 @@ $$
 p(w_1, \dots, w_m) = \prod^m_{t = 1} P(w_t | w_1, \dots, w_{t - 1})
 $$
 
+下面是一个简单的例子，表明“今天天气很好”这句话出现概率的计算方式。
+
+$$
+\begin{align}
+p(\text{今天天气很好}) = & \ p(\text{好} | \text{今天天气很}) \\
+  \times & \ p(\text{很} | \text{今天天气}) \\
+  \times & \ p(\text{气} | \text{今天天}) \\
+  \times & \ p(\text{天} | \text{今天}) \\
+  \times & \ p(\text{天} | \text{今})
+\end{align}
+$$
+
 这个模型有时候也称为**条件语言模型（conditional language model）**。简单来说，**大语言模型，就是在寻找下一个词**。
 
 ## 生成
@@ -131,14 +143,16 @@ $$
 
 下面不区分使用“字”和“词”，在英文文献中一般使用 word。
 
+![嵌入将词转化为向量](/assets/images/2025-03-25-AI学习-大语言模型/embedding.png)
+
 ## 一个简单的例子
 
 我们其实是有办法将一个“事物”转化为向量的，方法是对这个事物进行多维度的描述。比如“人”这个事物，我们可以从很多维度描述，，比如身高，体重，性别，年龄，种族，肤色，等等。而每一个维度有其对应的取值范围。通过这样，我们可以把人转化为向量，下面通过一个表的形式给出一个例子。
 
 | 名字 | 身高 | 体重 | 性别 | 年龄 | 种族 | 肤色 |
 | --- | --- | --- | --- | --- | --- | --- |
-| 小明 | 170 | 60 | 男 | 20 | 白人 | 黄色 |
-| 小红 | 160 | 50 | 女 | 25 | 白人 | 黑色 |
+| 小明 | 170 | 60 | 男 | 20 | 白人 | 白色 |
+| 小红 | 160 | 50 | 女 | 25 | 白人 | 白色 |
 | 小陈 | 180 | 70 | 男 | 30 | 黑人 | 棕色 |
 
 将事物转化为向量，有助于我们建立事物之间的关系，寻找其相似性。比如对于小明和小陈来说，他们都是男性，在这个维度上来看，他们比较相似。而对于小明和小红来说，他们的相似性可能在于他们都是白人。
@@ -183,6 +197,8 @@ const embedding = (sentence: Matrix): Matrix => {
     return embeddingMatrix
 }
 ```
+
+> 这时候可能有人会问，这个 `EMBEDDING_TABLE` 是怎么来的？这是训练出来的，在最开始的时候定义好词向量的维度，比如 deepseek 是 7168，这意味着每个词在 deepseek 的隐藏空间里，都是 7168 维的，至于每一维的值，都是通过训练学习出来的。
 
 ## 嵌入在 LLM 中的作用
 
@@ -238,3 +254,4 @@ class LLM {
 
 - 给定一个固定的问题，最好是有相对固定答案的问题，调整 temperature 观察大语言模型的输出。
 - 在 [huggingface](https://huggingface.co/) 上找一个开源的 embedding 模型，然后看看一些常用词的向量是什么。
+- 找一个常用词，比如 `love`，然后用距离函数把它附近的词都找出来。
