add: more posts

--- a/source/_posts/computer/2025-04-20-新电脑配置.md
+++ b/source/_posts/computer/2025-04-20-新电脑配置.md
@@ -115,7 +115,12 @@ tags:
 
 - `brew`: 包管理，直接使用[官网脚本](https://brew.sh/)安装，安装完之后最好更新一下。
 - `n`: 管理 node 版本，直接使用 `brew install n` 安装。有了 `n` 之后再按需安装 `node` 以及 `npm` 即可。
-- `git`: 版本控制，直接使用 `brew install git` 安装。
+- `git`: 版本控制，直接使用 `brew install git` 安装。新电脑装完 `git` 之后需要配置一下用户名和邮箱
+
+   ```bash
+   git config --global user.name "yourname"
+   git config --global user.email "youremail"
+   ```
 
 ### ssh
 
