feat: more posts

--- a/source/_posts/computer/AI学习/训练.md
+++ b/source/_posts/computer/AI学习/训练.md
@@ -28,7 +28,7 @@ const examples = {
 </script>
 
 <div class="theme-color-blue" markdown=1>
-`#训练` `#损失` `#批学习` `#学习率` `大模型预训练`
+`#训练` `#损失` `#批学习` `#学习率` `#大模型预训练`
 </div>
 
 <style>
