feat: add more posts

--- a/source/_posts/computer/AI学习/强化学习初步.md
+++ b/source/_posts/computer/AI学习/强化学习初步.md
@@ -10,6 +10,15 @@ tags:
     - 强化学习
 ---
 
+<script src="/assets/lib/board.js" /></script>
+<style>
+.board {
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
+</style>
+
 <div class="theme-color-blue" markdown=1>
 `#强化学习`
 </div>
@@ -135,3 +144,130 @@ graph LR
     style Agent fill:#fff,stroke:#333,stroke-dasharray: 5 5
     style Env fill:#fff,stroke:#333,stroke-dasharray: 5 5
 ```
+
+# 一个简单的例子
+
+由于强化学习最初为人熟知的例子是 alpha go，所以这里就拿围棋作为例子。不过这里也不会过分采用围棋术语，这里用到的术语对其他棋类运动也适用，在强化学习语境里也很好理解。
+
+> 问题：我们希望能训练出一个会下围棋的智能体
+
+## 应用层
+
+使用我们一贯的黑盒抽象方法，我们从顶层开始逐步解决这个问题。既然这个智能体是会下围棋的，那么它的应用层接口应该具备以下的能力。（为了避免复杂的表示，这里假设黑白双方都是由同一个智能体执行的）
+
+```ts
+const agent = new Agent()
+const game = new Game()
+
+while (game.isNotOver()) {
+    const state = game.getState()
+    const move = agent.makeDecision(state)
+    game.takeAction(move)
+}
+```
+
+由此可见，智能体最重要的一个作用是基于环境（当前的游戏状态）做出决策，如果我们希望得到这样一个智能体，我们需要一种方式对其进行训练，或者提供一种方式让它学习。
+
+## 决策层
+
+在决策层，智能体的输入是当前环境的状态，当然，在黑盒抽象中，我们暂时无需关心这个状态的表现形式。但对于熟悉暴力美学的大家来说，最直观能想到的一种方式，也是最朴素的一种方式是“随机选择”。
+
+```ts
+class Agent {
+    makeDecision(state: State) {
+        // 从当前状态中获取可以下棋的位置
+        const possibleMoves = state.getPossibleMoves()
+        // 随机选择一个位置
+        return randomChoice(possibleMoves)
+    }
+}
+```
+
+很明显，大家虽然喜欢暴力美学，但是实际进行选择的时候一般不会这样鲁莽，而是会衡量一些“价值”，比如
+
+- 在这几步棋里，哪一步会比较好呢？
+- 我走了这一步之后，会让自己的情况更有利吗？
+
+有了这些考虑之后，我们就需要一个衡量的过程了，而有了衡量结果之后，我们也可以通过一种策略对结果进行选择。
+
+```ts
+class Agent {
+    makeDecision(state: State) {
+        // 从当前状态中获取可以下棋的位置
+        const possibleMoves = state.getPossibleMoves()
+        // 衡量每一步的价值
+        const values = this.evaluate(possibleMoves)
+        // 根据价值进行选择
+        return this.select(possibleMoves, values)
+    }
+}
+```
+
+这其中的“衡量过程”，其实是一个很复杂的过程，里面有很多可能的选择。
+
+### 价值函数
+
+**价值函数（value function）** 是一个将输入映射成价值的一个函数。这个输入可以是状态，可以是动作，甚至也可以是一个策略。我们还是从最简单的例子开始，在上面的 `evaluate` 函数中，我们将可以下棋的位置转化为价值，假设我们有这样的一个万能的价值函数， 那么 `evaluate` 函数就可以通过如下的方式实现：
+
+```ts
+class Agent {
+    evaluate(moves: Move[]) {
+        // 价值函数将每一步转化为一个价值，价值越高意味着赢的概率越高，这样采取这个行动的概率就应该增大
+        const values = moves.map(move => this.valueFunction(move))
+        return values
+    }
+}
+```
+
+如果我们知道了每一步的价值，那么我们可以实现一个朴素的贪心策略，那就是直接选择价值最高的一步。
+
+```ts
+class Agent {
+    select(moves: Move[], values: number[]) {
+        // 找到价值最高的一步
+        const maxValue = Math.max(...values)
+        // 找到所有价值最高的一步
+        const maxValueMoves = moves.filter((move, index) => values[index] === maxValue)
+        // 随机选择一个价值最高的一步
+        return randomChoice(maxValueMoves)
+    }
+}
+```
+
+在这个例子里，这个价值函数称为 **动作价值函数（action value function）**。
+
+<div class="board" id="board-1" style="width: 500px; height: 500px;"></div>
+<script>
+const boardContainer = document.getElementById('board-1');
+const goBoard = new Board(boardContainer);
+
+goBoard.play([10, 10], 'white');
+goBoard.play([10, 9], 'black');
+goBoard.play([10, 11], 'black');
+goBoard.play([9, 10], 'black');
+
+goBoard.tryToPlay([11, 10], 'black', 9, { backgroundColor: 'black'});
+goBoard.tryToPlay([12, 10], 'black', 8, { backgroundColor: '#666'});
+goBoard.tryToPlay([13, 10], 'black', 7, { backgroundColor: '#999'});
+goBoard.tryToPlay([12, 9], 'black', 7, { backgroundColor: '#999'});
+goBoard.tryToPlay([12, 11], 'black', 7, { backgroundColor: '#999'});
+goBoard.tryToPlay([12, 8], 'black', 2, { backgroundColor: '#bbb'});
+goBoard.tryToPlay([13, 9], 'black', 1, { backgroundColor: '#ccc'});
+goBoard.tryToPlay([14, 10], 'black', 1, { backgroundColor: '#ccc'});
+</script>
+
+
+
+但如前所述，在衡量过程中，我们其实可能会有更多思考，比如我们可以思考棋局状态的评分，假设你距离胜利只有一步之遥，那么当前棋局对于你来说评分是 100 分（因为再走一步就能赢，而且现在到你走）。那再前一步，你离胜利有两步之遥，当然对手可能会有一手超级逆转，但可能性不大，你可以先发制人，不过毕竟不是真正的胜利，所以此时的棋局可能是 98 分。假设我们有一个价值函数，能直接对棋盘进行评分，那么我们的 `evaluate` 函数就可以通过如下的方式实现：
+
+```ts
+class Agent {
+    evaluate(moves: Move[]) {
+        const values = moves.map(move => {
+            const nextState = game.takeAction(move)
+            const value = this.valueFunction(nextState)
+            return value
+        })
+        return values
+    }
+}
