add: more posts

--- a/source/_posts/computer/2025-04-20-新电脑配置.md
+++ b/source/_posts/computer/2025-04-20-新电脑配置.md
@@ -72,6 +72,12 @@ tags:
     defaults write -g ApplePressAndHoldEnabled -bool false
     ```
 
+  有时候全局设置不太行，还得单独设置某个 app（比如 trae）
+
+    ```bash
+    defaults write com.trae.app ApplePressAndHoldEnabled -bool false
+    ```
+
 - `CommandLineTools`: 命令行工具，这个需要在终端中安装，使用 `xcode-select --install` 安装。现在有些新机会自动弹出，所以点确认即可。
 - `Dock` 的精简以及设置，这个可以根据个人喜好来设置。
 - 快捷键以及触摸屏的设置，这个就看个人需要了。
