--- a/source/_posts/computer/AI学习/强化学习初步.md
+++ b/source/_posts/computer/AI学习/强化学习初步.md
@@ -207,7 +207,20 @@ class Agent {
 
 ### 价值函数
 
-**价值函数（value function）** 是一个将输入映射成价值的一个函数。这个输入可以是状态，可以是动作，甚至也可以是一个策略。我们还是从最简单的例子开始，在上面的 `evaluate` 函数中，我们将可以下棋的位置转化为价值，假设我们有这样的一个万能的价值函数， 那么 `evaluate` 函数就可以通过如下的方式实现：
+**价值函数（value function）** 是一个将输入映射成价值的一个函数。这个输入可以是状态，可以是动作，甚至也可以是一个策略。
+
+#### 动作价值函数
+
+我们还是从最简单的例子开始，在上面的 `evaluate` 函数中，我们将可以下棋的位置转化为价值，假设我们有这样的一个万能的价值函数：
+
+```mermaid
+graph LR
+    Action["动作"] ---> ActionValue["动作价值函数"]
+    ActionValue ---> Value["价值"]
+```
+
+那么 `evaluate` 函数就可以通过如下的方式实现：
+
 
 ```ts
 class Agent {
@@ -218,6 +231,25 @@ class Agent {
     }
 }
 ```
+
+<div class="board" id="board-1" style="width: 500px; height: 500px;"></div>
+<script>
+const b1 = new Board(document.getElementById('board-1'));
+
+b1.play([10, 10], 'white');
+b1.play([10, 9], 'black');
+b1.play([10, 11], 'black');
+b1.play([9, 10], 'black');
+
+b1.tryToPlay([11, 10], 'black', 9, { backgroundColor: 'black'});
+b1.tryToPlay([12, 10], 'black', 8, { backgroundColor: '#666'});
+b1.tryToPlay([13, 10], 'black', 7, { backgroundColor: '#999'});
+b1.tryToPlay([12, 9], 'black', 7, { backgroundColor: '#999'});
+b1.tryToPlay([12, 11], 'black', 7, { backgroundColor: '#999'});
+b1.tryToPlay([12, 8], 'black', 2, { backgroundColor: '#bbb'});
+b1.tryToPlay([13, 9], 'black', 1, { backgroundColor: '#ccc'});
+b1.tryToPlay([14, 10], 'black', 1, { backgroundColor: '#ccc'});
+</script>
 
 如果我们知道了每一步的价值，那么我们可以实现一个朴素的贪心策略，那就是直接选择价值最高的一步。
 
@@ -236,29 +268,17 @@ class Agent {
 
 在这个例子里，这个价值函数称为 **动作价值函数（action value function）**。
 
-<div class="board" id="board-1" style="width: 500px; height: 500px;"></div>
-<script>
-const boardContainer = document.getElementById('board-1');
-const goBoard = new Board(boardContainer);
+#### 状态价值函数
 
-goBoard.play([10, 10], 'white');
-goBoard.play([10, 9], 'black');
-goBoard.play([10, 11], 'black');
-goBoard.play([9, 10], 'black');
+但如前所述，在衡量过程中，我们其实可能会有更多思考，比如我们可以思考棋局状态的评分，假设你距离胜利只有一步之遥，那么当前棋局对于你来说评分是 100 分（因为再走一步就能赢，而且现在到你走）。那再前一步，你离胜利有两步之遥，当然对手可能会有一手超级逆转，但可能性不大，你可以先发制人，不过毕竟不是真正的胜利，所以此时的棋局可能是 98 分。假设我们有一个价值函数，能直接对棋盘进行评分：
 
-goBoard.tryToPlay([11, 10], 'black', 9, { backgroundColor: 'black'});
-goBoard.tryToPlay([12, 10], 'black', 8, { backgroundColor: '#666'});
-goBoard.tryToPlay([13, 10], 'black', 7, { backgroundColor: '#999'});
-goBoard.tryToPlay([12, 9], 'black', 7, { backgroundColor: '#999'});
-goBoard.tryToPlay([12, 11], 'black', 7, { backgroundColor: '#999'});
-goBoard.tryToPlay([12, 8], 'black', 2, { backgroundColor: '#bbb'});
-goBoard.tryToPlay([13, 9], 'black', 1, { backgroundColor: '#ccc'});
-goBoard.tryToPlay([14, 10], 'black', 1, { backgroundColor: '#ccc'});
-</script>
+```mermaid
+graph LR
+    State["状态"] ---> StateValue["状态价值函数"]
+    StateValue ---> Value["价值"]
+```
 
-
-
-但如前所述，在衡量过程中，我们其实可能会有更多思考，比如我们可以思考棋局状态的评分，假设你距离胜利只有一步之遥，那么当前棋局对于你来说评分是 100 分（因为再走一步就能赢，而且现在到你走）。那再前一步，你离胜利有两步之遥，当然对手可能会有一手超级逆转，但可能性不大，你可以先发制人，不过毕竟不是真正的胜利，所以此时的棋局可能是 98 分。假设我们有一个价值函数，能直接对棋盘进行评分，那么我们的 `evaluate` 函数就可以通过如下的方式实现：
+那么我们的 `evaluate` 函数就可以通过如下的方式实现：
 
 ```ts
 class Agent {
@@ -271,3 +291,12 @@ class Agent {
         return values
     }
 }
+```
+
+<div class="board" id="board-2" style="width: 200px; height: 200px;"></div>
+<script>
+const b2 = new Board(document.getElementById('board-2'), 8, { noBorder: true });
+
+b2.play([2, 3], 'white');
+b2.play([2, 4], 'black');
+</script>
