add: more posts

--- a/source/_posts/computer/AI学习/强化学习初步.md
+++ b/source/_posts/computer/AI学习/强化学习初步.md
@@ -20,7 +20,7 @@ tags:
 </style>
 
 <div class="theme-color-blue" markdown=1>
-`#强化学习`
+`#强化学习` `#强化学习流程` `#价值函数` `#选择策略`
 </div>
 
 # 书籍推荐
@@ -293,6 +293,8 @@ class Agent {
 }
 ```
 
+假设目前在下面这个状态，此时黑子和白子其实都只下了一步棋而已，并且两者成对称的状态，我们可以判断此时两者势均力敌（当然实际也不一定是，这里只是简化了棋盘，举一个简单例子而已）。
+
 <div class="board" id="board-2" style="width: 200px; height: 200px;"></div>
 <script>
 const b2 = new Board(document.getElementById('board-2'), 8, { noBorder: true });
@@ -300,3 +302,98 @@ const b2 = new Board(document.getElementById('board-2'), 8, { noBorder: true });
 b2.play([2, 3], 'white');
 b2.play([2, 4], 'black');
 </script>
+
+但如果到了下面这个状态，此时黑子已经占据了比较多的地方，并且形成了两个眼，那么这一个局部来看黑子是比较占优的。
+
+<div class="board" id="board-3" style="width: 200px; height: 200px;"></div>
+<script>
+const b3 = new Board(document.getElementById('board-3'), 8, { noBorder: true });
+
+b3.play([2, 4], 'black');
+b3.play([2, 5], 'black');
+b3.play([2, 6], 'black');
+b3.play([3, 6], 'black');
+b3.play([4, 6], 'black');
+b3.play([4, 5], 'black');
+b3.play([4, 4], 'black');
+b3.play([4, 3], 'black');
+b3.play([4, 2], 'black');
+b3.play([5, 2], 'black');
+b3.play([6, 2], 'black');
+b3.play([6, 3], 'black');
+b3.play([6, 4], 'black');
+b3.play([5, 4], 'black');
+b3.play([3, 4], 'black');
+
+b3.play([1, 7], 'white');
+b3.play([3, 1], 'white');
+b3.play([3, 2], 'white');
+b3.play([3, 3], 'white');
+b3.play([2, 3], 'white');
+b3.play([1, 3], 'white');
+</script>
+
+而状态价值函数，则可以将这样的状态转化为一个价值。
+
+### 选择策略
+
+在上面的例子中，我们都采用了“贪心”的策略，通过选择价值较高的动作或者状态，而期望得到一个较好的结果。当然这也是非常合理的策略，但是在不同的场景里，选择的策略是应该适当发生变化的。在某些游戏中，每一步得到的收益不一定是均等的。
+
+比如有可能走了一条每一步都只有微小收益的路径，但最后因为一个错误功亏一篑。这其实就是前期一直使用贪心策略导致的恶果。所以实际选择的时候，需要兼顾 **exploration（探索）** 以及 **exploitation（利用）**。
+
+- **利用** 是指基于当前已知信息选择最优的行动，以最大化短期回报。
+- **探索** 是指通过尝试新的行动或者策略，以获取更多环境信息，从而增大发现潜在最大收益的可能。
+
+#### 贪心策略
+
+贪心策略就是上面的策略，非常简单直接，永远使用收益最高的短期选择，是绝对的 **利用**。
+
+```ts
+class Agent {
+    exploit(moves: Move[], values: number[]) {
+        const maxValue = Math.max(...values)
+        const maxValueMoves = moves.filter((move, index) => values[index] === maxValue)
+        return randomChoice(maxValueMoves)
+    }
+}
+```
+
+#### 随机策略
+
+而随机策略，也非常简单直接，就是完全的随机，是绝对的 **探索**。
+
+```ts
+class Agent {
+    explore(moves: Move[], values: number[]) {
+        return randomChoice(moves)
+    }
+}
+```
+
+#### ε-贪心策略
+
+ε-贪心策略是一种在探索和利用之间进行权衡的策略。它会以 ε 的概率进行探索，以 1 - ε 的概率进行利用。
+
+```ts
+class Agent {
+    select(moves: Move[], values: number[]) {
+        if (Math.random() < this.epsilon) {
+            return this.explore(moves, values)
+        } else {
+            return this.exploit(moves, values)
+        }
+    }
+}
+```
+
+# 小结
+
+- **强化学习** 与 **监督学习** 以及 **无监督学习** 构成机器学习的三大方法。
+- **强化学习** 是一种 **试错学习** 的方法，通过不断地尝试和学习，最终找到最优的策略。
+- **强化学习四要素**
+    - **智能体**：是强化学习的核心，它可以根据当前的环境状态，选择最优的行动。
+    - **环境**：是智能体的外部世界，它可以提供奖励信号，也可以提供惩罚信号。
+    - **状态**：是环境的一个快照，它可以用来描述当前的环境状态。
+    - **动作**：是智能体的一个决策，它可以改变环境的状态。
+- **价值函数**：可以将状态，或者动作映射为一个数值（价值）。
+- **选择策略**：可以根据价值函数计算出来的价值，通过 **探索** 或者 **利用** 来选择一个动作。
