add: recent posts

--- a/source/_posts/computer/AI学习/强化学习初步.md
+++ b/source/_posts/computer/AI学习/强化学习初步.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: AI学习时间 10 - 强化学习初步
-date: 2025-05-28
+date: 2025-06-04
 categories:
     - AI
 tags:
@@ -77,9 +77,13 @@ graph TD
 
 ```mermaid
 graph LR
-    Data[数据] --> Model[模型]
-    Answer[回答] --> Model
+    Data[数据] --> DL[深度学习]
+    Answer[回答] --> DL
+    DL --> Model[模型]
     Model --> Rules[规则]
+
+    %% 样式设置
+    style DL fill:#e1f5fe,stroke:#333
 ```
 
 ```ts
@@ -97,10 +101,14 @@ const predict = model(input)
 
 ```mermaid
 graph LR
-    Action[动作] --> Agent[智能体]
-    Env[环境] --> Agent
-    Reward[奖励] --> Agent 
+    Action[动作] --> RL[强化学习]
+    Env[环境] --> RL 
+    Reward[奖励] --> RL
+    RL ---> Agent[智能体]
     Agent --> Policy[策略]
+
+    %% 样式设置
+    style RL fill:#e1f5fe,stroke:#333
 ```
 
 ```ts
@@ -124,30 +132,30 @@ const action = agent.makeDecision(environment)
 
 ```mermaid
 graph LR
-    subgraph Env["环境"]
+    subgraph Env[<b>环境</b>]
         direction TB
-        State["状态"] -..-> Evolution["演化"]
+        State[状态] -..-> Evolution[演化]
         Evolution -..-> State
     end
 
-    subgraph Agent["智能体"]
+    subgraph Agent[<b>智能体</b>]
         direction TB
-        Policy["策略"] -..-> Optimization["优化"]
+        Policy[策略] -..-> Optimization[优化]
         Optimization -..-> Policy
     end
 
-    Env ---> Reward["奖励"]
+    Env ---> Reward[奖励]
     Reward ---> Agent
-    Agent ---> Action["动作"]
+    Agent ---> Action[动作]
     Action ---> Env
 
-    style Agent fill:#fff,stroke:#333,stroke-dasharray: 5 5
-    style Env fill:#fff,stroke:#333,stroke-dasharray: 5 5
+    style Agent fill:#fff3e0,stroke:#333,stroke-dasharray: 5 5
+    style Env fill:#fff3e0,stroke:#333,stroke-dasharray: 5 5
 ```
 
 # 一个简单的例子
 
-由于强化学习最初为人熟知的例子是 alpha go，所以这里就拿围棋作为例子。不过这里也不会过分采用围棋术语，这里用到的术语对其他棋类运动也适用，在强化学习语境里也很好理解。
+由于强化学习最初为人熟知的例子是 AlphaGo，所以这里就拿围棋作为例子。不过这里也不会过分采用围棋术语，这里用到的术语对其他棋类运动也适用，在强化学习语境里也很好理解。
 
 > 问题：我们希望能训练出一个会下围棋的智能体
 
@@ -334,6 +342,27 @@ b3.play([1, 3], 'white');
 </script>
 
 而状态价值函数，则可以将这样的状态转化为一个价值。
+
+#### 区别
+
+有人会提出疑问，这两者有什么区别呢？简单来说
+
+- **状态价值函数** 是用来评估一个状态的好坏的。
+- **动作价值函数** 是用来评估在一个状态下，执行某个动作的好坏。
+
+这么来看动作价值函数多了一个信息，那便是执行的动作。这里一个细节点是，真正的动作价值函数是基于某个状态的（上面的描述为了简化没有明确这一点）。实际上的动作价值函数应该是
+
+```ts
+class Agent {
+    evaluate(game: Game, moves: Move[]) {
+        // 价值函数将每一步转化为一个价值，价值越高意味着赢的概率越高
+        // 这样采取这个行动的概率就应该增大
+        const state = game.getState()
+        const values = moves.map(move => this.valueFunction(state, move))
+        return values
+    }
+}
+```
 
 ### 选择策略
 
