--- a/source/_posts/life/2024-07-03-往事系列.md
+++ b/source/_posts/life/2024-07-03-往事系列.md
@@ -26,6 +26,7 @@ tags:
 
 有想法的时候记录一下，没想法的时候吐槽一下。
 
+- {% post_link life/往事系列/2025-06-30-随想 %}
 - {% post_link life/往事系列/2025-05-24-随想 %}
 - {% post_link life/往事系列/2025-03-16-随想 %}
 - {% post_link life/往事系列/2025-02-21-随想 %}
