add: recent posts

--- a/source/_posts/computer/2025-07-15-自研D2C-FOCO.md
+++ b/source/_posts/computer/2025-07-15-自研D2C-FOCO.md
@@ -156,8 +156,87 @@ graph LR
 | MLLM + LLM | ⭐⭐⭐ | ⭐⭐⭐ | 困难 | Grok, Gemini |
 | MLLM       | ⭐⭐   | ⭐⭐⭐ | 困难 |  |
 
-## 预期收益
+# 架构介绍
 
-- 知识与技术层面紧跟这一波浪潮。
-- 为日常生产提供一定程度的提效。
-- D2C 流程中的中间产物也可以为其他方向服务。
+## 主流程原理
+
+下面是整体架构图，简单表述各组件之间的交互以及通讯内容。
+
+![](/assets/images/2025-07-15-自研D2C-FOCO/流程简要.png)
+
+**XXX 补充更准确的架构图**
+
+- **figma plugin**：在 figma app 内部，获取设计稿的 dom 以及 style，通过请求的方式传到 D2C server 作进一步处理。
+- **D2C server**：一个承接 D2C 主要工作流的服务器，用于接收 figma plugin 传出来的数据，构造合适的 prompt，然后与 LLM server 进行交互，获得代码。
+- **LLM server**：大语言模型的服务器，用于将 prompt 转化为组件代码。
+- **vscode plugin**：在 vscode（或者其他代码编辑器）内部，用于接收代码，并且将代码应用到对应的项目目录里。
+- **renderer**：对生成代码进行可视化，是一个带有可执行环境的小型前端 sandbox 环境。
+
+按主流程各功能模块的所在位置，将其分为插件，本地服务，远程服务，本地可视化管理台四个部分。下面将分别描述这四个部分的架构以及职能范畴。
+
+## 插件
+
+figma 插件的职责是获取 dom 结构以及 style 样式，然后将数据通过接口调用的方式传到 D2C server。
+
+下面是 figma 插件具体需要的能力：
+
+- 【基础功能】支持选择节点
+- 【基础功能】支持多选节点
+- 【基础功能】显示节点 dom 结构以及样式
+- 【基础功能】调用 D2C server 接口发送节点结构及样式数据
+- 【进阶功能】支持人为划分组件
+- 【进阶功能】支持对划分的组件进行标注
+- 【进阶功能】发送数据的时候包含结构化的组件划分与标注
+
+因为 figma 插件相对封闭，所以功能应该尽量简单，对数据不做过多处理，直接传出来交给 D2C server 处理，下面是 figma 插件架构图。
+
+![](/assets/images/2025-07-15-自研D2C-FOCO/插件架构.png)
+
+figma sdk 提供能力监听当前选择的节点。
+
+```ts
+window.onmessage = event => {
+  const message = event.data.pluginMessage;
+  if (message.type === 'node-info') {
+    currentNodeData = message.data;
+  }
+}
+```
+
+## 本地服务
+
+本地服务主要是指 FOCO 的应用层，这层服务提供了插件，以及本地可视化管理台的服务接口。主要包括：
+
+- 【基础功能】接收 figma 插件的数据
+- 【基础功能】组件管理
+- 【基础能力】模型接入与管理能力
+- 【基础功能】基础大模型调用能力
+- 【基础功能】基础组件渲染能力
+- 【基础功能】命令行能力
+- 【进阶功能】多轮对话能力
+- 【进阶功能】组件生成问题自修复能力
+- 【进阶功能】使用数据统计
+
+单独拆分本地服务有几点考虑：
+
+- 用户使用与安装零成本，一键启动
+- 提供模型接入的灵活性，可以选择本地模型，也可以选择远程模型
+- 与模型隔离，也能一定程度保证模型调用的安全性（在远程服务中会对 prompt 进行校验与检查）
+- 运行速度更快，体验更好，接口调用几乎没有网络延时
+
+## 远程服务
+
+远程服务主要是指与 LLM 
+
+## 本地可视化管理台
+
+可视化管理台的主要作用在于承载本地服务的功能，与一般的智能代码编辑不同，D2C 最终产物是一个可以呈现的组件，这要求一个沙箱环境对其进行渲染。
+
+## Prompt设计
+
+# 问题与解决
+
+## 上下文过长问题
+## 模型速度问题
+## 回答错误处理问题
+## 回答一致性问题
