add: recent posts

--- a/source/_posts/computer/2025-07-15-自研D2C-FOCO.md
+++ b/source/_posts/computer/2025-07-15-自研D2C-FOCO.md
@@ -189,8 +189,6 @@ graph LR
 
 ![](/assets/images/2025-07-15-自研D2C-FOCO/流程简要.png)
 
-**XXX 补充更准确的架构图**
-
 - **figma plugin**：在 figma app 内部，获取设计稿的 dom 以及 style，通过请求的方式传到 D2C server 作进一步处理。
 - **D2C server**：一个承接 D2C 主要工作流的服务器，用于接收 figma plugin 传出来的数据，构造合适的 prompt，然后与 LLM server 进行交互，获得代码。
 - **LLM server**：大语言模型的服务器，用于将 prompt 转化为组件代码。
@@ -434,6 +432,18 @@ graph LR
 1. 使用体验：包括单轮对话的等待，以及多轮对话的等待。对于D2C来说，经实测是不太可能使用小模型的，满血版的模型生成效果比小模型实在好太多。另外目前智能代码 agent 所使用的基本上是 7b 小模型，所以体验是非常好的。
 2. 前置多轮问答：如果希望通过前置多轮问答来提升首次用户回答的质量，在回答速度缓慢的前提下，约等于变相拖慢了首次用户回答的时间。
 
-## 回答错误处理问题
+# 一些效果
 
-# 计划与展望
+<div style="border: solid 1px black; border-radius: 8px; overflow: hidden; box-shadow: 0 0 5px #ddd; margin-bottom: 10px;">
+![](/assets/images/2025-07-15-自研D2C-FOCO/效果1.png)
+</div>
+
+<div style="border: solid 1px black; border-radius: 8px; overflow: hidden; box-shadow: 0 0 5px #ddd;">
+![](/assets/images/2025-07-15-自研D2C-FOCO/效果2.png)
+</div>
+
+# 探讨与展望
+
+- D2C 已经逐渐变成一个狭窄的赛道，后续基于开发流程全 AI 化的尝试与产品将会越来越多，甚至从需求出发到代码也能 AI 一条龙提速，但是否因为这样我们就没必要 D2C 了？
+
+- D2C 整合逻辑生成的可能性究竟有多大？
