add: recent posts

--- a/source/_posts/life/往事系列/2025-08-11-随想.md
+++ b/source/_posts/life/往事系列/2025-08-11-随想.md
@@ -17,4 +17,4 @@ tags:
 
 前段时间分享了一下 AlphaGo 相关的，让我不自觉地重温了一遍《棋魂》。这个剧已经看过无数次了，再次重温还是非常顺畅，好作品确实还能使我一集接一集地看。以前总是觉得佐为最后的离开是一件很悲伤的事情，但现在却觉得这是必然的一个结果，如果佐为不走，一直陪着小光，那整个作品的立意就非常普通了，正因为小光必须成长，观众也必须成长，所以佐为必须离开。
 
-任何人都不能陪伴任何人一辈子，每个人生命中会和不同的人有不同的交集，当然这些交集的时间都尤其存在的意义，但我还是觉得结果非常重要，就像练琴，打球，我清楚知道只要坚持下去就能有好结果，而那些不追求结果只追求过程快乐的人，他们基本没有进步。而不进步，他们也无法感受到更高层次的乐趣。最近我发现这是我很认同的一种人生哲学，结果实在太重要，工作中如此，生活中也是如此。当然，我们要追求的是能有所掌控的结果，无法掌控的生老病死自然无法强求，可能这也是INTJ如此内卷的原因。
+任何人都不能陪伴任何人一辈子，每个人生命中会和不同的人有不同的交集，当然这些交集的时间都有其存在的意义，但我还是觉得结果非常重要，就像练琴，打球，我清楚知道只要坚持下去就能有好结果，而那些不追求结果只追求过程快乐的人，他们基本没有进步。而不进步，他们也无法感受到更高层次的乐趣。最近我发现这是我很认同的一种人生哲学，结果实在太重要，工作中如此，生活中也是如此。当然，我们要追求的是能有所掌控的结果，无法掌控的生老病死自然无法强求，可能这也是INTJ如此内卷的原因。
